added new methods

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;Database=RestaurantReservationDB;Trusted_Connection=True;"
+        "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;Database=RestaurantDB;Trusted_Connection=True;"
     }
 }
